[gd_scene load_steps=17 format=3 uid="uid://c82oohrayy22y"]

[ext_resource type="Script" uid="uid://7frsxvq8dw7f" path="res://Interface/UnitMenuItem/UnitMenuRow.gd" id="1_7vfkv"]
[ext_resource type="StyleBox" uid="uid://mmblmgoor80e" path="res://Interface/UnitMenuItem/MenuItemRowStraightEnds.tres" id="1_8rjce"]
[ext_resource type="PackedScene" uid="uid://cj1i70p5sp2jy" path="res://Interface/UnitMenuItem/NeedsBar.tscn" id="2_xgenu"]
[ext_resource type="PackedScene" uid="uid://x8xxowdckmno" path="res://Interface/SkillMenuCell.tscn" id="6_d7bra"]
[ext_resource type="Texture2D" uid="uid://bpbc512k156ps" path="res://Graphics/circle_border.png" id="6_xxu2b"]
[ext_resource type="Texture2D" uid="uid://dqiq6xuia0g32" path="res://Graphics/Icons/sparkles.png" id="7_bh7ph"]
[ext_resource type="Texture2D" uid="uid://dheong16pv8d0" path="res://Graphics/ring_background.png" id="7_w8tk3"]
[ext_resource type="Texture2D" uid="uid://c6eqc0l1jlv4u" path="res://Graphics/Icons/ray_gun.png" id="8_d7bra"]
[ext_resource type="Texture2D" uid="uid://cj1kbklwty13p" path="res://Graphics/Portraits/portrait06.png" id="8_xxu2b"]
[ext_resource type="Texture2D" uid="uid://yas5ipmtr16h" path="res://Graphics/Icons/spaceship.png" id="9_tnl1o"]
[ext_resource type="Texture2D" uid="uid://cuh1ow4e6cqjr" path="res://Graphics/Icons/invisible.png" id="10_mn4bl"]
[ext_resource type="PackedScene" uid="uid://bsgung4h2sac" path="res://Interface/MenuCell.tscn" id="10_ocf41"]
[ext_resource type="Texture2D" uid="uid://cd07t7lifoi8s" path="res://Graphics/Icons/microchip.png" id="11_o1nb0"]
[ext_resource type="Texture2D" uid="uid://bakjni2vwql36" path="res://Graphics/Icons/eclipse.png" id="13_yq8wr"]
[ext_resource type="Texture2D" uid="uid://dlfbplrv1p3pw" path="res://Graphics/Icons/stars_stack.png" id="14_bh7ph"]
[ext_resource type="Texture2D" uid="uid://by1ngejnultnc" path="res://Graphics/Icons/heart.png" id="15_d7bra"]

[node name="UnitMenuRow" type="MarginContainer"]
script = ExtResource("1_7vfkv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameAndTitle" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
alignment = 2

[node name="TitlePanel" type="PanelContainer" parent="MarginContainer/HBoxContainer/NameAndTitle"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_8rjce")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameAndTitle/TitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 44
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/NameAndTitle/TitlePanel/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Text Text Text"

[node name="NameLabel" parent="MarginContainer/HBoxContainer/NameAndTitle" instance=ExtResource("10_ocf41")]
layout_mode = 2
show_icon = false
font_size = 24
text_align = 0
margin_left = 30

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="SkillRanks" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CharmRank" parent="MarginContainer/HBoxContainer/MarginContainer/SkillRanks" instance=ExtResource("6_d7bra")]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("7_bh7ph")

[node name="CombatRank" parent="MarginContainer/HBoxContainer/MarginContainer/SkillRanks" instance=ExtResource("6_d7bra")]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("8_d7bra")

[node name="PilotRank" parent="MarginContainer/HBoxContainer/MarginContainer/SkillRanks" instance=ExtResource("6_d7bra")]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("9_tnl1o")

[node name="StealthRank" parent="MarginContainer/HBoxContainer/MarginContainer/SkillRanks" instance=ExtResource("6_d7bra")]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("10_mn4bl")

[node name="TechRank" parent="MarginContainer/HBoxContainer/MarginContainer/SkillRanks" instance=ExtResource("6_d7bra")]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("11_o1nb0")

[node name="StatusLabel" parent="MarginContainer/HBoxContainer" instance=ExtResource("10_ocf41")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 8
text = "Status"
icon = null
font_size = 24

[node name="NeedsBars" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/NeedsBars"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="AdventureBar" parent="MarginContainer/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("2_xgenu")]
layout_mode = 2
icon = ExtResource("13_yq8wr")

[node name="FameBar" parent="MarginContainer/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("2_xgenu")]
layout_mode = 2
icon = ExtResource("14_bh7ph")

[node name="RomanceBar" parent="MarginContainer/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("2_xgenu")]
layout_mode = 2
icon = ExtResource("15_d7bra")

[node name="ViceBar" parent="MarginContainer/HBoxContainer/NeedsBars/HBoxContainer" instance=ExtResource("2_xgenu")]
layout_mode = 2

[node name="PortraitBorder" type="TextureRect" parent="."]
self_modulate = Color(0.58, 0.30479, 0.1566, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_xxu2b")
expand_mode = 3

[node name="PortraitBackground" type="TextureRect" parent="PortraitBorder"]
self_modulate = Color(0.914311, 0.829894, 0.773236, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_w8tk3")
expand_mode = 1

[node name="PortraitTexture" type="TextureRect" parent="PortraitBorder/PortraitBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_xxu2b")
expand_mode = 3
